--- a/src/app/dashboard/components/tabla-perfiles/tabla-perfiles.component.html
+++ b/src/app/dashboard/components/tabla-perfiles/tabla-perfiles.component.html
@@ -1,1 +1,37 @@
-<p>tabla-perfiles works!</p>
+<div class="fondoTabla">
+  <table mat-table [dataSource]="perfiles">
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef> ID </th>
+      <td mat-cell *matCellDef="let perfil"> {{perfil.id}} </td>
+    </ng-container>
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let perfil"> {{perfil.nombre}} </td>
+    </ng-container>
+    <ng-container matColumnDef="estado">
+      <th mat-header-cell *matHeaderCellDef> Estado </th>
+      <td mat-cell *matCellDef=" let perfil">
+        <mat-slide-toggle #s{{perfil.id}} [checked]="perfil.activo" matTooltip="Cambiar estado"
+          matTooltipPosition="left" matTooltipHideDelay="100" title="Cambiar estado" [id]="perfil.id"
+          (change)="updateStatus($event)">
+        </mat-slide-toggle>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+      <td mat-cell *matCellDef="let perfil">
+        <button mat-icon-button (click)="editarPerfil(perfil)" matTooltip="Editar perfil" matTooltipPosition="right"
+          matTooltipHideDelay="100" title="Editar perfil">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row
+      *matHeaderRowDef="(isHandset$ | async)? ['nombre', 'estado', 'acciones']:['nombre', 'estado', 'acciones']"></tr>
+    <tr mat-row
+      *matRowDef="let row; columns: (isHandset$ | async)? ['nombre', 'estado', 'acciones']:['nombre', 'estado', 'acciones'];">
+    </tr>
+  </table>
+</div>
